--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 # SQLite version 3.x
 #   gem install sqlite3
 #
-#   Ensure the SQLite 3 gem is defined in your Gemfile
+#   Ensure the SQLite 3 gem is defined in your Gemfile.old
 #   gem 'sqlite3'
 #
 development:
