--- a/config/database.yml
+++ b/config/database.yml
@@ -1,19 +1,17 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile.old
-#   gem 'sqlite3'
-#
 development:
   adapter: postgresql
   encoding: utf8
-  database: postgres
+  host: localhost
+  database: cart_development
   pool: 5
-  user: Cart
-  password: Cart
+  user: cart_development
+  password: cart_development
 
 test:
-  adapter: sqlite3
-  database: db/db_dev_db.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  host: localhost
+  database: cart_test
   pool: 5
-  timeout: 5000
+  user: cart_test
+  password: cart_test
