--- a/config/database.yml
+++ b/config/database.yml
@@ -1,17 +1,17 @@
-development:
-  adapter: postgresql
-  encoding: utf8
-  host: localhost
-  database: cart_development
-  pool: 5
-  user: cart_development
-  password: cart_development
 
-test:
-  adapter: postgresql
-  encoding: utf8
-  host: localhost
-  database: cart_test
-  pool: 5
-  user: cart_test
-  password: cart_test
+
+ development:
+   adapter: postgresql
+   encoding: unicode
+   database: postgres
+   pool: 5
+   username: cart_development
+   password: cart_development
+
+ test:
+   adapter: postgresql
+   encoding: unicode
+   database: postgres
+   pool: 5
+   username: cart_test
+   password: cart_test
