--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  name: marcelo
   password_digest: <%= BCrypt::Password.create('secret') %>
 
 two:
-  name: MyString
+  name: vinicius
   password_digest: <%= BCrypt::Password.create('secret') %>
