Authorizarion and access limitation done. Tests erasing db fixed. Clear the problem. No deletion of last user

--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@
  test:
    adapter: postgresql
    encoding: unicode
-   database: postgres
+   database: cart_test
    pool: 5
    username: cart_test
    password: cart_test
